Names section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -594,10 +594,123 @@
                     </div>
                 </div>
             </section>
-            <div>
+            <div class="names-hosting">
                 <section class="names">
                     <div class="names__container container">
                         <h2 class="sll__title header-2">Доменные имена</h2>
+                        <div class="names__wrapper row">
+                            <div class="names__content  col-12 col-lg-6">
+                                <div class="names__text main-text">
+                                    <p>Правильное название сайта — залог трафика и успешной рекламы. Домен должен
+                                        ассоциироваться у пользователя с конкретными услугами или отраслью. </p>
+                                    <p>Часто говорят: «Посмотри на auto.ru» и становится понятно, что речь про ресурс,
+                                        который связан с автомобилями. Точно так же и с другими сайтами, в имени
+                                        которых заложен смысл их деятельности.</p>
+                                    <p>Помимо основных, выделяют специальные - тематические зоны: .travel, .site, .pro и
+                                        т.д.</p>
+                                </div>
+                                <div class="names__button">
+                                    <button class="button button-text button-text_small">Подобрать и зарегистрировать
+                                        домен</button>
+                                </div>
+                            </div>
+                            <div class="names__blocks col-12 col-lg-6">
+                                <ul class="names__block">
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .ru
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">600 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .su
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">900 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .net
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">1200 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .biz
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">1200 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .moscow
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">500 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <ul class="names__block names__block_right">
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .рф
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">600 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .com
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">1200 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .org
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">1200 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .info
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">1200 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                    <li class="names__item names-item">
+                                        <div class="names-item__domen">
+                                            .msc.ru
+                                        </div>
+                                        <div class="names-item__price">
+                                            <div class="names-item__value">500 ₽ </div>
+                                            <div class="names-item__year">в год</div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
