Hosting section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -713,6 +713,27 @@
                         </div>
                     </div>
                 </section>
+                <section class="hosting">
+                    <div class="hosting__container container">
+                        <h2 class="sll__title header-2">Хостинг VPS/VDS серверов
+                        </h2>
+                        <div class="hosting__wrapper row">
+                            <div class="col-12 col-md-5">
+                                <div class="hosting__image image-bg">
+                                    <img src="./img/vps/connecting.png" alt="подключение к серверу">
+                                </div>
+                            </div>
+
+                            <div class="hosting__content col-12 col-md-7">
+                                <p>Готовые тарифы VPS сбалансированы по производительности. Индивидуальная конфигурация
+                                    позволит получить оптимальное количество ресурсов с оплатой за час. </p>
+                                <p>Все тарифы VPS хостинга построены на оборудовании Xeon Scalable Silver/Gold. </p>
+                                <p>Серверы размещены в DDoS-защищенном кластере ЦОД Tier lll и подключены к точке обмена
+                                    трафиком Cloud-IX.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
             <section class="advantages">
                 <div class="advantages__container container">
