Vps section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -424,12 +424,15 @@
                         <div class="tariff-additions__info col-12 col-md-6">
                             <h4 class="tariff-additions__title header-4">Вместе с хостингом Вы получите</h4>
                             <ul class="tariff-additions__items">
-                                <li class="tariff-additions__item"><span></span>30 дней на тестовый период + 100%
+                                <li class="tariff-additions__item round-list"><span></span>30 дней на тестовый период +
+                                    100%
                                     возврат денег, если
                                     хостинг не подойдёт</li>
-                                <li class="tariff-additions__item"><span></span>Хостинг в подарок при оплате тарифа на 1
+                                <li class="tariff-additions__item round-list"><span></span>Хостинг в подарок при оплате
+                                    тарифа на 1
                                     год</li>
-                                <li class="tariff-additions__item"><span></span>Бесплатный перенос сайта от другого
+                                <li class="tariff-additions__item round-list"><span></span>Бесплатный перенос сайта от
+                                    другого
                                     хостинг-провайдера</li>
                             </ul>
                         </div>
@@ -734,6 +737,68 @@
                         </div>
                     </div>
                 </section>
+            </div>
+            <div class="vps">
+                <div class="vps__container container">
+                    <div class="vps__wrapper row">
+                        <div class="vps__price col-12 col-lg-4 col-xl-5">
+                            <h4 class="vps__title header-4">Цены на VPS KVM</h4>
+                            <p class="vps__subtitle">На каждом VPS сервере для вас уже включено:</p>
+                            <ul class="vps__items">
+                                <li class="vps__item round-list"><span></span>Root-доступ
+                                </li>
+                                <li class="vps__item round-list"><span></span>Защиты от DDoS
+                                </li>
+                                <li class="vps__item round-list"><span></span>Домен в подарок при оплате за 1 год
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="vps__table col-12 col-lg-8 col-xl-7">
+                            <table class="vps-table">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>Start VPS</th>
+                                        <th>Optima VPS</th>
+                                        <th>Drive VPS</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>CPU</td>
+                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>3</td>
+                                    </tr>
+                                    <tr>
+                                        <td>RAM</td>
+                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>HDD</td>
+                                        <td>20 GB</td>
+                                        <td>40 GB</td>
+                                        <td>60 GB</td>
+                                    </tr>
+                                    <tr>
+                                        <td>₽ в месяц</td>
+                                        <td>350 <button
+                                                class="button button_blue button-text button-text_small">Заказать
+                                                VPS</button> </td>
+                                        <td>450 <button
+                                                class="button button_blue button-text button-text_small">Заказать
+                                                VPS</button></td>
+                                        <td>950 <button
+                                                class="button button_blue button-text button-text_small">Заказать
+                                                VPS</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
             <section class="advantages">
                 <div class="advantages__container container">
