Feedback section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -727,7 +727,7 @@
                                 </div>
                             </div>
 
-                            <div class="hosting__content col-12 col-md-7">
+                            <div class="hosting__content main-text col-12 col-md-7">
                                 <p>Готовые тарифы VPS сбалансированы по производительности. Индивидуальная конфигурация
                                     позволит получить оптимальное количество ресурсов с оплатой за час. </p>
                                 <p>Все тарифы VPS хостинга построены на оборудовании Xeon Scalable Silver/Gold. </p>
@@ -738,7 +738,7 @@
                     </div>
                 </section>
             </div>
-            <div class="vps">
+            <section class="vps">
                 <div class="vps__container container">
                     <div class="vps__wrapper row">
                         <div class="vps__price col-12 col-lg-4 col-xl-5">
@@ -799,10 +799,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <section class="advantages">
                 <div class="advantages__container container">
-                    <h2 class="sll__title header-2">Выгоды нашего хостинга для Вас</h2>
+                    <h2 class="advantages__title header-2">Выгоды нашего хостинга для Вас</h2>
                     <ul class="advantages__items">
                         <li class="advantages__item">
                             <div class="advantages__image">
@@ -832,6 +832,33 @@
                                 помогут обеспечить сохранность данных клиентов.</div>
                         </li>
                     </ul>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="feedback__container container">
+                    <div class="feedback__wrapper row">
+                        <div class="feedback__info col-12 col-md-4 col-lg-6">
+                            <h4 class="vps__title header-4">Отзывы о нашем хостинге</h4>
+                            <div class="feedback__text main-text">
+                                <p>Хостинг – наша работа! Более 10 лет мы размещаем сайты своих клиентов на надёжном и
+                                    современном оборудовании. </p>
+                                <p>Почитайте, что говорят наши клиенты</p>
+                            </div>
+                        </div>
+                        <div class="feedback__feedback col-12 col-md-8 col-lg-6">
+                            <div class="feedback-feedback">
+                                <p class="feedback-feedback__text main-text">«Пользуюсь хостингом уже около 8 лет.
+                                    Хорошая цена и
+                                    удобно что CPanel для управления. Поддержка помогает хорошо.»
+                                </p>
+                                <p class="feedback-feedback__author mini-text">Петровна Мария Ивановна</p>
+                                <div class="feedback-feedback__image image-bg">
+                                    <img src="./img/feedback/feedback-1.jpg" alt="фото пользователя">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
