FQA section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -858,7 +858,116 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="fqa">
+                <div class="fqa__container container">
+                    <h2 class="fqa__title header-2">Вопросы и ответы</h2>
+                    <div class="fqa__text main-text">Здесь представлены самые популярные вопросы, которые задают нам
+                        клиенты перед
+                        оформлением заказа на виртуальный хостинг. Если вы не нашли ответ на имеющиеся у вас вопрос,
+                        задайте его нашим специалистам.</div>
+                    <div class="fqa__wrapper">
+                        <div class="accordion">
+                            <ul class="accordion__block">
+                                <li class="accordion__item">
+                                    <div class="accordion__header main-text main-text_semibold">Что такое
+                                        SSL-сертификат?
+                                    </div>
+                                    <div class="accordion__content mini-text">Это криптографический протокол для
+                                        организации
+                                        защищенного соединения с вашим сайтом. Такие протоколы необходимы всем сайтам,
+                                        на
+                                        которых происходит сбор любых данных и сведений, есть формы обратной связи или
+                                        другие формы для заполнения, сайтам с высоким уровнем доверия (банки, новостные
+                                        ресурсы, интернет-магазины, форумы и т.д.). При отсутствии HTTPS-соединения,
+                                        любой
+                                        браузер перед переадресацией на сайт известит пользователя, о том, что
+                                        соединение не
+                                        безопасно. Это значительно снижает конверсию сайта и приводит к потере
+                                        посетителей
+                                    </div>
+                                </li>
+                                <li class="accordion__item">
+                                    <div class="accordion__header main-text main-text_semibold">Немного о нас и наших
+                                        услугах
+                                    </div>
+                                    <div class="accordion__content mini-text">Это криптографический протокол для
+                                        организации
+                                        защищенного соединения с вашим сайтом. Такие протоколы необходимы всем сайтам,
+                                        на
+                                        которых происходит сбор любых данных и сведений, есть формы обратной связи или
+                                        другие формы для заполнения, сайтам с высоким уровнем доверия (банки, новостные
+                                        ресурсы, интернет-магазины, форумы и т.д.). При отсутствии HTTPS-соединения,
+                                        любой
+                                        браузер перед переадресацией на сайт известит пользователя, о том, что
+                                        соединение не
+                                        безопасно. Это значительно снижает конверсию сайта и приводит к потере
+                                        посетителей
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul class="accordion__block accordion__block_right">
+                                <li class="accordion__item">
+                                    <div class="accordion__header main-text main-text_semibold">Как выбрать
+                                        SSL-сертификат?
 
+                                    </div>
+                                    <div class="accordion__content mini-text">Это криптографический протокол для
+                                        организации
+                                        защищенного соединения с вашим сайтом. Такие протоколы необходимы всем сайтам,
+                                        на
+                                        которых происходит сбор любых данных и сведений, есть формы обратной связи или
+                                        другие формы для заполнения, сайтам с высоким уровнем доверия (банки, новостные
+                                        ресурсы, интернет-магазины, форумы и т.д.). При отсутствии HTTPS-соединения,
+                                        любой
+                                        браузер перед переадресацией на сайт известит пользователя, о том, что
+                                        соединение не
+                                        безопасно. Это значительно снижает конверсию сайта и приводит к потере
+                                        посетителей
+                                    </div>
+                                </li>
+
+                                <li class="accordion__item">
+                                    <div class="accordion__header main-text main-text_semibold">Есть ли бесплатные
+                                        SSL-сертификаты?
+                                    </div>
+                                    <div class="accordion__content mini-text">Это криптографический протокол для
+                                        организации
+                                        защищенного соединения с вашим сайтом. Такие протоколы необходимы всем сайтам,
+                                        на
+                                        которых происходит сбор любых данных и сведений, есть формы обратной связи или
+                                        другие формы для заполнения, сайтам с высоким уровнем доверия (банки, новостные
+                                        ресурсы, интернет-магазины, форумы и т.д.). При отсутствии HTTPS-соединения,
+                                        любой
+                                        браузер перед переадресацией на сайт известит пользователя, о том, что
+                                        соединение не
+                                        безопасно. Это значительно снижает конверсию сайта и приводит к потере
+                                        посетителей
+                                    </div>
+                                </li>
+                                <li class="accordion__item">
+                                    <div class="accordion__header main-text main-text_semibold">Как правильно выбрать
+                                        тариф?
+
+                                    </div>
+                                    <div class="accordion__content mini-text">Это криптографический протокол для
+                                        организации
+                                        защищенного соединения с вашим сайтом. Такие протоколы необходимы всем сайтам,
+                                        на
+                                        которых происходит сбор любых данных и сведений, есть формы обратной связи или
+                                        другие формы для заполнения, сайтам с высоким уровнем доверия (банки, новостные
+                                        ресурсы, интернет-магазины, форумы и т.д.). При отсутствии HTTPS-соединения,
+                                        любой
+                                        браузер перед переадресацией на сайт известит пользователя, о том, что
+                                        соединение не
+                                        безопасно. Это значительно снижает конверсию сайта и приводит к потере
+                                        посетителей
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
