Try section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -970,6 +970,24 @@
                     </div>
                 </div>
             </section>
+            <div class="try">
+                <div class="try__container container">
+                    <div class="try__block">
+                        <div class="try__text">
+                            <p class="header-4">Получите <span>30 дней</span> на тестирование нашего хостинга
+                                <span>бесплатно</span>
+                            </p>
+                            <p class="header-4"> Плюс, <span>100% гарантия возврата</span> всех оплаченных денежных
+                                средств в этот
+                                период.</p>
+                        </div>
+                        <div class="try__button">
+                            <button class="button button-text button-text_small">Попробовать
+                                хостинг</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="footer">
 
