Payment section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -986,8 +986,49 @@
                                 хостинг</button>
                         </div>
                     </div>
+                    <div class="try__arrow-left">
+                        <img src="./img/try/arrow-left.svg" alt="стралочка к блоку">
+                    </div>
+                    <div class="try__arrow-right">
+                        <img src="./img/try/arrow-right.svg" alt="стралочка к блоку">
+                    </div>
                 </div>
             </div>
+            <section class="payment">
+                <div class="payment__container container">
+                    <h2 class="payment__title header-2">Способы оплаты</h2>
+                    <div class="payment__text main-text">Оплачивайте услуги виртуального хостинга WSHOST любым, удобным
+                        для
+                        вас методом. Наш хостинг также могут заказать и оплатить юридические лица безналичным переводом
+                    </div>
+                    <ul class="payment__items">
+                        <li class="payment__item">
+                            <img src="./img/payment/web-money.png" alt="webmoney">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/u-money.png" alt="Ю money">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/visa.png" alt="visa">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/mastercard.png" alt="mastercard">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/mir.png" alt="мир">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/qiwi.png" alt="qiwi">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/paypal.png" alt="paypal">
+                        </li>
+                        <li class="payment__item">
+                            <img src="./img/payment/sber.png" alt="sber">
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
