Footer done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -1031,7 +1031,121 @@
             </section>
         </main>
         <footer class="footer">
-
+            <div class="footer__container container">
+                <div class="footer__wrapper">
+                    <div class="footer__info">
+                        <div class="footer__logo">
+                            <img src="./img/header/logo.svg" alt="логотип">
+                        </div>
+                        <div class="footer__text mini-text">
+                            WSHOST даёт возможность купить хостинг сайтов дешево с SSL и полноценным пакетом услуг.
+                            Дешевая регистрация доменов и недорогой хостинг позволяют создать сайт любой тематики. Мы
+                            занимаем лидирующие позиции в даной сфере. Нашими клиентами являются жители городов Москва,
+                            Санкт-Петербург и т.д. Выбирая наш php хостинг вы получаете премиум услуги по низкой цене.
+                        </div>
+                    </div>
+                    <ul class="footer__contacts">
+                        <li class="footer__contact contact">
+                            <div class="contact__icon">
+                                <img src="./img/footer/phone.svg" alt="телефон">
+                            </div>
+                            <div class="contact__contact">
+                                <div class="contact__text mini-text">Телефон в Москве:</div>
+                                <a href="tel:+7(495)123-45-56">+7 (495) 123-45-56</a>
+                            </div>
+                        </li>
+                        <li class="footer__contact contact">
+                            <div class="contact__icon contact__icon_email">
+                                <img src="./img/footer/mail.svg" alt="электронная почта">
+                            </div>
+                            <div class="contact__contact">
+                                <div class="contact__text mini-text">Электронная почта</div>
+                                <a href="mailto:support@wshost.ru">support@wshost.ru</a>
+                            </div>
+                        </li>
+                        <li class="footer__contact contact">
+                            <div class="contact__icon contact__icon_email">
+                                <img src="./img/footer/location.svg" alt="локация">
+                            </div>
+                            <div class="contact__contact">
+                                <div class="contact__text mini-text">Адрес дата-ценра и офиса продаж</div>
+                                <a href="#">г. Москва, Варшавское шоссе, д. 125
+                                </a>
+                                <div class="contact__descr mini-text">Tехническая поддержка работает 24/7</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="footer__social">
+                        <ul class="footer__items">
+                            <li class="footer__item">
+                                <img src="./img/footer/twitter.svg" alt="твиттер">
+                            </li>
+                            <li class="footer__item">
+                                <img src="./img/footer/instagram.svg" alt="инстаграм">
+                            </li>
+                            <li class="footer__item">
+                                <img src="./img/footer/vk.svg" alt="вконтакте">
+                            </li>
+                            <li class="footer__item">
+                                <img src="./img/footer/facebook.svg" alt="фейсбук">
+                            </li>
+                        </ul>
+                        <div class="footer__button">
+                            <button class="button button_blue">Report
+                                Spam</button>
+                        </div>
+                    </div>
+                    <div class="footer__menu">
+                        <div class="footer__menu-block footer-menu">
+                            <p class="footer-menu__title main-text main-text_semibold">О компании
+                            </p>
+                            <ul class="footer-menu__items">
+                                <li class="footer-menu__item">О хостинг-провайдере</li>
+                                <li class="footer-menu__item">Партнёрская программа
+                                </li>
+                                <li class="footer-menu__item">Дата-центр
+                                </li>
+                                <li class="footer-menu__item">Документы для клиентов
+                                </li>
+                                <li class="footer-menu__item">Договор на услуги хостинга
+                                </li>
+                                <li class="footer-menu__item">Способы оплаты
+                                </li>
+                                <li class="footer-menu__item">Цены
+                                </li>
+                                <li class="footer-menu__item">Акции
+                                </li>
+                                <li class="footer-menu__item">Новости
+                                </li>
+                                <li class="footer-menu__item">Вакансии
+                                </li>
+                                <li class="footer-menu__item">Контакты
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer__menu-block footer-menu">
+                            <p class="footer-menu__title main-text main-text_semibold">Наши услуги
+                            </p>
+                            <ul class="footer-menu__items">
+                                <li class="footer-menu__item">Виртуальный хостинг
+                                </li>
+                                <li class="footer-menu__item">Хостинг для 1С-Битрикс
+                                </li>
+                                <li class="footer-menu__item">Хостинг для Wordpress
+                                </li>
+                                <li class="footer-menu__item">Аренда VPS
+                                </li>
+                                <li class="footer-menu__item">Регистрация доменов
+                                </li>
+                                <li class="footer-menu__item">SSL сертификаты
+                                </li>
+                                <li class="footer-menu__item">Конструктор сайтов
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
