--- a/src/index.html
+++ b/src/index.html
@@ -413,6 +413,145 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="tariff__card">
+                            <div class="tariff__block">
+                                <div class="tariff-block">
+                                    <div class="tariff-block__image tariff-block__image_start">
+                                        <img src="./img/tariff/paper-airplane.svg" alt="бумажный самолётик">
+                                    </div>
+                                    <div class="tariff-block__name header-3">старт</div>
+                                </div>
+                            </div>
+                            <div class="tariff__wrapper">
+                                <div class="tariff__infinity main-text">
+                                    Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                                </div>
+                                <div class="tariff__description">
+                                    <div class="tariff-description">
+                                        <div class="tariff-description__top">
+                                            <p class="tariff-description__space main-text main-text_semibold">7Gb места
+                                                SSD </p>
+                                            <div class="tariff-description__text mini-text">
+                                                <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                                <p>Поддержка любой CMS</p>
+                                                <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                                <p>Защита от DDoS</p>
+                                                <p>Повышенная производительность</p>
+                                                <p>Домен в подарок</p>
+                                            </div>
+                                        </div>
+                                        <div class="tariff-description__bottom">
+                                            <div class="tariff-description__price">
+                                                <div class="tariff-description__new-price">
+                                                    <div></div>
+                                                    <p class="header-3">149 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                                <div class="tariff-description__old-price">
+                                                    <p>117 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                            </div>
+                                            <button
+                                                class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                                хостинг</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__card">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_standart">
+                                    <img src="./img/tariff/helicopter.svg" alt="вертолет">
+                                </div>
+                                <div class="tariff-block__name header-3">стандарт</div>
+                            </div>
+                            <div class="tariff__wrapper">
+                                <div class="tariff__infinity main-text">
+                                    Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                                </div>
+                                <div class="tariff__description">
+                                    <div class="tariff-description">
+                                        <div class="tariff-description__top">
+                                            <p class="tariff-description__space main-text main-text_semibold">30Gb места
+                                                SSD
+                                            </p>
+                                            <div class="tariff-description__text mini-text">
+                                                <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                                <p>Поддержка любой CMS</p>
+                                                <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                                <p>Защита от DDoS</p>
+                                                <p>Повышенная производительность</p>
+                                                <p>Домен в подарок</p>
+                                            </div>
+                                        </div>
+                                        <div class="tariff-description__bottom">
+                                            <div class="tariff-description__price">
+                                                <div class="tariff-description__new-price">
+                                                    <div></div>
+                                                    <p class="header-3">290 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                                <div class="tariff-description__old-price">
+                                                    <p>117 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                            </div>
+                                            <button
+                                                class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                                хостинг</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__card">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_business">
+                                    <img src="./img/tariff/rocket.svg" alt="космическая ракета">
+                                </div>
+                                <div class="tariff-block__name header-3">бизнес</div>
+                            </div>
+                            <div class="tariff__wrapper">
+                                <div class="tariff__infinity main-text">
+                                    Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                                </div>
+                                <div class="tariff__description">
+                                    <div class="tariff-description">
+                                        <div class="tariff-description__top">
+                                            <p class="tariff-description__space main-text main-text_semibold">50Gb места
+                                                SSDgit
+                                            </p>
+                                            <div class="tariff-description__text mini-text">
+                                                <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                                <p>Поддержка любой CMS</p>
+                                                <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                                <p>Защита от DDoS</p>
+                                                <p>Повышенная производительность</p>
+                                                <p>Домен в подарок</p>
+                                            </div>
+                                        </div>
+                                        <div class="tariff-description__bottom">
+                                            <div class="tariff-description__price">
+                                                <div class="tariff-description__new-price">
+                                                    <div></div>
+                                                    <p class="header-3">470 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                                <div class="tariff-description__old-price">
+                                                    <p>117 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                            </div>
+                                            <button
+                                                class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                                хостинг</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                     <div class="tariff__all-characteristics link">
                         <a href="#">Посмотреть все характеристики нашего хостинга</a>
